--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="company_profile">
                   <a href="#!" class="fixall cp_anc slide_white">
-                    Company Profile <i class="las la-long-arrow-alt-down"></i>
+                    COMPANY PROFILE <i class="las la-long-arrow-alt-down"></i>
                   </a>
                 </div>
                 <ul class="nav-list fixall list-unstyled">
@@ -117,7 +117,7 @@
                 </div>
                 <div class="company_profile">
                   <a href="#!" class="fixall cp_anc slide_white">
-                    Company Profile <i class="las la-long-arrow-alt-down"></i>
+                    COMPANY PROFILE <i class="las la-long-arrow-alt-down"></i>
                   </a>
                 </div>
                 <div class="menu-bar">
@@ -258,7 +258,7 @@
               Faucibus sit odio bibendum lobortis diam.
             </div>
             <div class="read-more">
-              <a class="read-anc fixall" href="!#">
+              <a class="read-anc fixall slide_white" href="!#">
                 REad More <i class="las la-arrow-up"></i>
               </a>
             </div>
@@ -624,7 +624,7 @@
               together.
             </p>
             <div class="read-more">
-              <a class="read-anc fixall" href="!#">
+              <a class="read-anc fixall slide_white" href="!#">
                 Contact us <i class="las la-arrow-up"></i>
               </a>
             </div>
